--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -34,6 +34,7 @@ img {
   grid-template-columns: 1fr;
   grid-gap: 16px;
   padding-bottom: 24px;
+  align-content: center;
 }
 
 /*
@@ -47,7 +48,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 64px;
+  min-height: 80px;
   padding-right: 24px;
   padding-left: 24px;
   padding-top: 12px;
@@ -62,58 +63,54 @@ img {
  * Стили компонента SearchForm
  */
 .SearchForm {
+  padding: 8px 16px;
   display: flex;
   align-items: center;
+
   width: 100%;
   max-width: 600px;
   background-color: #fff;
-  border-radius: 3px;
+  border-radius: 5px;
   overflow: hidden;
+  outline: none;
+  justify-content: space-between;
 }
 
-.SearchForm-button {
+.SearchFormButton {
   display: inline-block;
-  width: 48px;
-  height: 48px;
+  width: auto;
+  height: auto;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
-  background-size: 40%;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.6;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   outline: none;
+  background-color: transparent;
+  opacity: 0.8;
 }
 
-.SearchForm-button:hover {
+.SearchFormButton:hover {
   opacity: 1;
 }
 
-.SearchForm-button-label {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  clip-path: inset(50%);
-  border: 0;
+.SearchFormButtonLabel {
+  width: 40px;
+  height: 40px;
+  /* padding: 1px; */
+  background-color: transparent;
+  font-size: 25px;
 }
 
-.SearchForm-input {
+.SearchFormInput {
   display: inline-block;
   width: 100%;
   font: inherit;
   font-size: 20px;
-  border: none;
   outline: none;
   padding-left: 4px;
   padding-right: 4px;
+  border: none;
 }
 
-.SearchForm-input::placeholder {
+.SearchFormInput::placeholder {
   font: inherit;
   font-size: 18px;
 }
@@ -143,7 +140,7 @@ img {
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
-.ImageGalleryItem-image {
+.ImageGalleryItem-Image {
   width: 100%;
   height: 260px;
   object-fit: cover;
@@ -182,7 +179,7 @@ img {
 */
 .Button {
   padding: 8px 16px;
-  border-radius: 2px;
+  border-radius: 5px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
@@ -193,15 +190,29 @@ img {
   cursor: pointer;
   font-family: inherit;
   font-size: 18px;
-  line-height: 24px;
+  line-height: 34px;
   font-style: normal;
   font-weight: 500;
-  min-width: 180px;
+  /* min-width: 180px; */
+  width: 100%;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
 .Button:hover,
 .Button:focus {
-  background-color: #303f9f;
+  background-color: white;
+  /* font-weight: 900; */
+  color: #303f9f;
+  border: 2px solid #303f9f;
+}
+
+.svg {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 5px;
+}
+
+.loader {
+  width: 100%;
 }
