--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -170,6 +170,9 @@ img {
 }
 
 .Modal {
+  min-width: 500px;
+  min-height: 500px;
+  background-color: #303f9f;
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
 }
@@ -197,7 +200,8 @@ img {
   width: 100%;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-}
+margin-bottom: 5px;
+  }
 
 .Button:hover,
 .Button:focus {
@@ -215,4 +219,5 @@ img {
 
 .loader {
   width: 100%;
+  margin-bottom: 30px;
 }
